--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>{{title}}</h1>
+<div class="main-hero">
+  <div class="container">
+
+    <h1>{{title}}</h1>
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
