Provide servcies and create components

--- a/src/app/planet-detail/planet-detail.component.html
+++ b/src/app/planet-detail/planet-detail.component.html
@@ -1,1 +1,70 @@
-<p>planet-detail works!</p>
+<div *ngIf="planet">
+
+  <div class="profile-cnt">
+    <h2>{{planet.name}}</h2>
+    <ul class="list-group">
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        <span>rotation_period</span>
+        <span class="badge badge-primary badge-pill">{{ planet.rotation_period }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        orbital_period
+        <span class="badge badge-primary badge-pill">{{ planet.orbital_period }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        diameter
+        <span class="badge badge-primary badge-pill">{{ planet.diameter }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        climate
+        <span class="badge badge-primary badge-pill">{{ planet.climate }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        gravity
+        <span class="badge badge-primary badge-pill">{{ planet.gravity }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        terrain
+        <span class="badge badge-primary badge-pill">{{ planet.terrain }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        surface_water
+        <span class="badge badge-primary badge-pill">{{ planet.surface_water }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        population
+        <span class="badge badge-primary badge-pill">{{ planet.population }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        residents
+        <span class="badge badge-primary badge-pill">{{ planet.residents.length }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        films
+        <span class="badge badge-primary badge-pill">{{ planet.films.length }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        created
+        <span class="badge badge-primary badge-pill">{{ planet.created }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        edited
+        <span class="badge badge-primary badge-pill">{{ planet.edited }}</span>
+      </li>
+      <li class="list-group-item d-flex justify-content-between align-items-center">
+        url
+        <span class="badge badge-primary badge-pill">{{ planet.url }}</span>
+      </li>
+    </ul>
+  </div>
+
+  <svg aria-hidden="true" (click)="goBack()" focusable="false" data-prefix="fas" data-icon="arrow-left"
+    class="svg-inline--fa fa-arrow-left fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+    <path fill="currentColor"
+      d="M257.5 445.1l-22.2 22.2c-9.4 9.4-24.6 9.4-33.9 0L7 273c-9.4-9.4-9.4-24.6 0-33.9L201.4 44.7c9.4-9.4 24.6-9.4 33.9 0l22.2 22.2c9.5 9.5 9.3 25-.4 34.3L136.6 216H424c13.3 0 24 10.7 24 24v32c0 13.3-10.7 24-24 24H136.6l120.5 114.8c9.8 9.3 10 24.8.4 34.3z">
+    </path>GO BACK
+  </svg>
+
+
+
+</div>
