--- a/src/app/planets/planets.component.html
+++ b/src/app/planets/planets.component.html
@@ -1,1 +1,3 @@
-<p>planets works!</p>
+<app-planet-search></app-planet-search>
+<app-pagination></app-pagination>
+<app-planet-detail [planet]="planet"></app-planet-detail>
