--- a/src/app/pagination/pagination.component.html
+++ b/src/app/pagination/pagination.component.html
@@ -1,1 +1,37 @@
-<p>pagination works!</p>
+<mat-paginator [length]="planets.length" [pageSize]="pageSize" [pageSizeOptions]="pageSizeOptions"
+  (page)="pageEvent = $event">
+</mat-paginator>
+
+<div *ngIf="!pageEvent">
+  <div class="planets">
+    <div class="planets-cnt" *ngFor="let planet of planets | slice: (1-1) * 10 : (1-1) * 10 + 10">
+      <a [routerLink]="['/planet', planet.name]" class="col-1-4">
+        <h4 class="module planet">{{ planet.name }}</h4>
+      </a>
+    </div>
+  </div>
+</div>
+
+<div *ngIf="pageEvent">
+  <div *ngIf="allPlanets.length != 61">
+    <div class="planets">
+      <div class="planets-cnt"
+        *ngFor="let planet of planets | slice: (pageEvent.pageIndex)*pageEvent.pageSize : (pageEvent.pageIndex)*pageEvent.pageSize+pageEvent.pageSize">
+        <a [routerLink]="['/planet', planet.name]" class="col-1-4">
+          <h4 class="module planet">{{ planet.name }}</h4>
+        </a>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="allPlanets.length == 61">
+    <div class="planets">
+      <div class="planets-cnt"
+        *ngFor="let planet of allPlanets | slice: (pageEvent.pageIndex)*pageEvent.pageSize : (pageEvent.pageIndex)*pageEvent.pageSize+pageEvent.pageSize">
+        <a [routerLink]="['/planet', planet.name]" class="col-1-4">
+          <h4 class="module planet">{{ planet.name }}</h4>
+        </a>
+      </div>
+    </div>
+  </div>
+
+</div>
