--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,9 +6,18 @@
   background-position: center;
   font-size: 20px;
   color: rgba(255, 255, 255, 0.26);
+ 
 }
 
 .container {
+  /* padding: 20px;
+  display: flex;
+  flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center;
+  border: 1px solid rbga(255,255,255,0.26);
+  background-color: yellow;
+  height: 100%; */
   padding: 20px;
 }
 
@@ -16,3 +25,34 @@ h1 {
   text-transform: uppercase;
   text-align: center;
 }
+
+
+
+/* AppComponent's private CSS styles
+h1 {
+    font-size: 1.2em;
+    margin-bottom: 0;
+  }
+  h2 {
+    font-size: 2em;
+    margin-top: 0;
+    padding-top: 0;
+  }
+  nav a {
+    padding: 5px 10px;
+    text-decoration: none;
+    margin-top: 10px;
+    display: inline-block;
+    background-color: #eee;
+    border-radius: 4px;
+  }
+  nav a:visited, a:link {
+    color: #334953;
+  }
+  nav a:hover {
+    color: #039be5;
+    background-color: #cfd8dc;
+  }
+  nav a.active {
+    color: #039be5;
+  } */
