--- a/src/app/planet-detail/planet-detail.component.css
+++ b/src/app/planet-detail/planet-detail.component.css
@@ -1,15 +1,19 @@
 .profile-cnt{
-    color: purple;
-    background: transparent;
+    font-weight: 900;
     min-width: 150px;
+    color: black;
 }
 
 .list-group-item {
-    color: purple;
     border: 1px solid rgb(90, 83, 83, 0.35);
-    background: transparent;
+    padding: 10px 2px;
 }
 
+.planet-title {
+    text-transform: uppercase;
+    color: dodgerblue;
+    font-weight: 700;
+}
 svg {
     width: 60px;
     height: 60px;
