--- a/src/app/pagination/pagination.component.css
+++ b/src/app/pagination/pagination.component.css
@@ -12,7 +12,7 @@
   background-color: #fff;
   margin: .5em 0;
   padding: 2em .2em;
-  height: 1.6em;
+  /* height: 1.6em; */
   border-radius: 4px;
   display: flex;
   justify-content: left;
